Enum "insurance_types" {
  "OC"
  "AC"
}

Enum "employee_type" {
  "MANAGER"
  "ADMINISTRATOR"
}

Enum "car_type" {
  "SEDAN"
  "COUPE"
  "SPORTS_CAR"
  "STATION_WAGON"
  "HATCHBACK"
  "CONVERTIBLE"
  "SUV"
  "MPV"
  "MINIVAN"
  "PICKUP_TRUCK"
  "CROSSOVER"
  "VAN"
}

Enum "visit_type" {
  "MAINTENANCE"
  "REPAIR"
}

Enum "company_type" {
  "REPAIR_STATION"
  "DIAGNOSTIC_STATION"
  "AUTOMOTIVE_SHOP"
}

Enum "visit_status" {
  "AT_SERVICE"
  "REPAIRED"
  "CHECKED_IN"
}

Table "insurance" {
  "date_of_expiry" timestamp
  "coverage" numeric
  "type" insurance_types
  "car_id" int

Indexes {
  (type, car_id) [pk]
}
}

Table "diagnostic_profile" {
  "car_id" int [pk]
  "visit_id" int
  "engine" varchar
  "body" varchar
  "low_voltage" varchar
  "lighting" varchar
  "breakes" varchar
  "sensors" varchar
  "miscellaneous" varchar
  "conditioning" varchar
}

Table "employee" {
  "employee_id" int [pk, increment]
  "company_id" int
  "type" employee_type
}

Table "employee_visit" {
  "employee_id" int
  "visit_id" int

Indexes {
  (employee_id, visit_id) [pk]
}
}

Table "car" {
  "car_id" int [pk, increment]
  "client_id" int
  "model" varchar
  "brand" varchar
  "type" car_type
}

Table "visit" {
  "visit_id" int [pk, increment]
  "car_id" int
  "date_of_visit" timestamp
  "price" numeric
  "type" visit_type
  "status" visit_status
}

Table "action" {
  "visit_id" int
  "action_desc" varchar

Indexes {
  (visit_id, action_desc) [pk]
}
}

Table "client" {
  "client_id" int [pk, increment]
  "name" varchar
  "surname" varchar
  "phone_number" varchar
  "email" varchar
  "discount" numeric
}

Table "company" {
  "company_id" int [pk, increment]
  "type" company_type
  "latitude" float8
  "longitude" float8
}

Table "auto_part" {
  "part_id" int [unique, pk, increment]
  "company_id" int
  "model" varchar
  "amount" numeric
  "price" numeric
}

Table "payment" {
  "visit_id" int [pk]
  "employee_id" int
  "amount" numeric
  "advance" numeric
  "is_fulfilled" bool
}

Ref:"car"."car_id" < "insurance"."car_id"

Ref:"car"."car_id" < "diagnostic_profile"."car_id"

Ref:"visit"."visit_id" < "diagnostic_profile"."visit_id"

Ref:"company"."company_id" < "employee"."company_id"

Ref:"diagnostic_profile"."car_id" < "visit"."car_id"

Ref:"visit"."visit_id" < "action"."visit_id"

Ref:"company"."company_id" < "auto_part"."company_id"

Ref:"employee"."employee_id" < "employee_visit"."employee_id"

Ref:"visit"."visit_id" < "employee_visit"."visit_id"

Ref:"client"."client_id" < "car"."client_id"

Ref:"employee"."employee_id" < "payment"."employee_id"

Ref:"visit"."visit_id" < "payment"."visit_id"
